<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Blackjack</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="opponentsHand">Opponent\'s Hand</string>
    <string name="playersHand">Player\'s Hand</string>
    <string name="hit">Hit</string>
    <string name="stand">Stand</string>
    <string name="lose">You Lose!</string>
    <string name="win">You Win!</string>
    <string name="tie">We Tied!</string>
    <string name="newGame">New Game</string>
    <string name="bet">Bet</string>
    <string name="gameState">"Game State: "</string>
    <string name="oMoney">&quot;Opponent's Money: &quot;</string>
    <string name="pMoney">Player\'s Money: </string>
    <string name="doubleDown">Double Down</string>
    <string name="surrender">Surrender</string>
    <string name="saveGame">Save Game</string>
    <string name="loadGame">Load Game</string>
    <string name="OPPONENT_PREF">OPPONENT_PREF</string>
    
</resources>
